Adjusting width for IE

--- a/important_things.html
+++ b/important_things.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 
-		<img src="important_things.svg" alt="Important Things">
-	
+		<img width="100%" src="important_things.svg" alt="Important Things">
+
 	</body>
 </html>
