--- a/important_things.html
+++ b/important_things.html
@@ -12,6 +12,7 @@
 			.segment_gold { fill: #FFCC67; }
 			.segment_gold:hover { fill: #E4A739; }
 			.segment_aqua { fill: #48C2C5; }
+			.aqua_pieces:hover .segment_aqua { fill: #3C9497; }
 		</style>
 	</head>
 	<body>
@@ -29,17 +30,21 @@
 
 			<path class="segment_gold" d="M267.959,86.988c0,14.466-5.479,27.673-14.465,37.667l20.143,20.144 c14.135-15.168,22.808-35.491,22.808-57.811c0-23.118-9.301-44.097-24.343-59.421L251.968,47.7 C261.854,57.865,267.959,71.723,267.959,86.988z"/>
 
-			<path class="segment_aqua" d="M155.158,86.988c0-14.745,5.694-28.18,14.991-38.24l-20.133-20.133 c-14.45,15.227-23.344,35.774-23.344,58.373c0,21.508,8.056,41.16,21.289,56.135l20.179-20.179 C160.037,113.176,155.158,100.642,155.158,86.988z"/>
+			<g class="aqua_pieces">
+				<path class="segment_aqua" d="M155.158,86.988c0-14.745,5.694-28.18,14.991-38.24l-20.133-20.133 c-14.45,15.227-23.344,35.774-23.344,58.373c0,21.508,8.056,41.16,21.289,56.135l20.179-20.179 C160.037,113.176,155.158,100.642,155.158,86.988z"/>
 
-			<polygon style="fill:#3c9497;" points="128.841,96.714 114.283,86.548 128.841,76.387"/>
+				<g class="aqua_over">
+					<polygon style="fill:#3c9497;" points="128.841,96.714 114.283,86.548 128.841,76.387"/>
 
-			<path style="fill:#3c9497;" d="M98.17,64.364l-14.207-0.126c-5.224,0.126-7.164,4.32-7.164,5.76v0.187v0.88l0,19.322 c0,1.327,1.064,2.387,2.317,2.387c1.314,0,2.377-1.06,2.377-2.387l0-16.701h1.97l0,16.021c0,0.253,0.033,0.5,0.063,0.68l0,28.729 c0,1.82,1.436,3.32,3.254,3.32c1.817,0,3.253-1.5,3.253-3.32l0-25.342h1.624l0,25.342c0,1.82,1.443,3.32,3.224,3.32 c1.813,0,3.29-1.5,3.29-3.32l0-29.409V89.58V73.685l1.751,0l0,16.701c0,1.327,1.126,2.387,2.5,2.387 c1.41,0,2.504-1.06,2.504-2.387l0-19.322v-0.88v-0.5C104.925,67.931,102.607,64.364,98.17,64.364z"/>
+					<path style="fill:#3c9497;" d="M98.17,64.364l-14.207-0.126c-5.224,0.126-7.164,4.32-7.164,5.76v0.187v0.88l0,19.322 c0,1.327,1.064,2.387,2.317,2.387c1.314,0,2.377-1.06,2.377-2.387l0-16.701h1.97l0,16.021c0,0.253,0.033,0.5,0.063,0.68l0,28.729 c0,1.82,1.436,3.32,3.254,3.32c1.817,0,3.253-1.5,3.253-3.32l0-25.342h1.624l0,25.342c0,1.82,1.443,3.32,3.224,3.32 c1.813,0,3.29-1.5,3.29-3.32l0-29.409V89.58V73.685l1.751,0l0,16.701c0,1.327,1.126,2.387,2.5,2.387 c1.41,0,2.504-1.06,2.504-2.387l0-19.322v-0.88v-0.5C104.925,67.931,102.607,64.364,98.17,64.364z"/>
 
-			<path style="fill:#3c9497;" d="M90.877,63.238c3.1,0,5.597-2.44,5.597-5.441c0-3.067-2.497-5.567-5.597-5.567 c-3.098,0-5.631,2.5-5.631,5.567C85.246,60.797,87.779,63.238,90.877,63.238z"/>
+					<path style="fill:#3c9497;" d="M90.877,63.238c3.1,0,5.597-2.44,5.597-5.441c0-3.067-2.497-5.567-5.597-5.567 c-3.098,0-5.631,2.5-5.631,5.567C85.246,60.797,87.779,63.238,90.877,63.238z"/>
 
-			<text x="100" y="135" style="fill:#3c9497; font-family:'Arial'; font-size: 8px; text-anchor: end; font-weight: bold;">Friends</text>
-			<text x="100" y="145" style="fill:#3c9497; font-family:'Arial'; font-size: 8px; text-anchor: end;">This is an example of text</text>
-			<text x="100" y="153" style="fill:#3c9497; font-family:'Arial'; font-size: 8px; text-anchor: end;">that can appear on rollover</text>
+					<text x="100" y="135" style="fill:#3c9497; font-family:'Arial'; font-size: 8px; text-anchor: end; font-weight: bold;">Friends</text>
+					<text x="100" y="145" style="fill:#3c9497; font-family:'Arial'; font-size: 8px; text-anchor: end;">This is an example of text</text>
+					<text x="100" y="153" style="fill:#3c9497; font-family:'Arial'; font-size: 8px; text-anchor: end;">that can appear on rollover</text>
+				</g>
+			</g>
 
 		</svg>
 
